vest-dsl/test/bad/choice_enum_type_mismatch.vest
fmt(@tag: u32) = choose(@tag) {
  A => u8,
  B => u16,
  C => u32,
}
